--- a/componets/FormCreate/style.module.css
+++ b/componets/FormCreate/style.module.css
@@ -1,19 +1,3 @@
-.container {
-    color: white;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.table {
-    display: flex;
-    background-color: #c85000;
-    height: 100px;
-    width: 100%;
-}
-
 .box {
     width: 90%;
     border: 1px solid white;
@@ -83,4 +67,10 @@
     background-color: #c85000;
     box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
     transform: translateY(0);
+}
+
+.error {
+    color: red;
+    text-align: center;
+    font-weight: bold;
 }
