--- a/componets/FormCreate/style.module.css
+++ b/componets/FormCreate/style.module.css
@@ -2,6 +2,7 @@
     width: 90%;
     border: 1px solid white;
     color: black;
+    flex-direction: column;
 }
 
 .input {
@@ -67,6 +68,24 @@
     background-color: #00be3f;
     box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
     transform: translateY(0);
+}
+
+.toggleForm {
+    display: flex;
+    border: 3px solid #007413;
+    border-radius: 10px;
+    margin: 5px;
+    width: 200px;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.toggleForm:hover {
+    cursor: pointer;
+    background-color: #007413;
+    color: black;
+    transition: 0.5s;
 }
 
 .error {
