--- a/componets/FormUpdate/style.module.css
+++ b/componets/FormUpdate/style.module.css
@@ -3,6 +3,10 @@
     border: 1px solid white;
     color: black;
     flex-direction: column;
+    background-color: white;
+    z-index: 4;
+    height: fit-content;
+    padding: 50px;
 }
 
 .input {
@@ -88,8 +92,14 @@
     transition: 0.5s;
 }
 
-.error {
-    color: red;
+.msgInput {
     text-align: center;
     font-weight: bold;
+}
+.red{
+    color: red;
+}
+
+.green{
+    color: green;
 }
