--- a/componets/Layout/CardapioItem/style.module.css
+++ b/componets/Layout/CardapioItem/style.module.css
@@ -1,13 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+
 .headCardapio{
     display: flex;
     justify-content: space-between;
 }
 
-.headCardapio span{
-	width: 40%;
+
+
+.warningNone{
+	display: none;
 
 }
+.itemCardapioNone{
+		min-height: 350px;
+	border: 3px solid  var(--color-primary);
+	border-radius: 23px;
+	position: relative;
+}
+.warningNone:hover{
+	cursor: not-allowed;
+}
+.itemCardapioNone .warningNone{
+	border-radius: 20px;
+	display: flex;
+	height: 100%;
+	width: 100%;
+	opacity: 0.8;
+	background-color: grey;
+	position: absolute;
+}
 
+.warningText{
+	width: 100%;
+	height: 100px;
+	background-color: darkred;
+}
+.warningText h1{
+	font-size: 2rem;
+}
+.headCardapio span{
+	width: 50%;
+
+}
+.title{
+	font-family: 'Rubik', sans-serif;
+	font-size: 1.3rem;
+}
 .textCardapio{
 	padding: 14px;
 }
@@ -15,25 +54,33 @@
 .img{
 	width: 100%;
 	height: 200px;
-	background-color: bisque;
 	border-radius:20px 20px 0px 0px;
+}
+.img img{
+		width: 100%;
+	height: 200px;
+	border-radius:20px 20px 0px 0px;
+	border-bottom: 3px solid  var(--color-primary);
 }
 .price{
 	text-align: right;
+	font-weight: bold;
+	color: var(--color-primary);
 }
 .itemCardapio{
-	height: 400px;
-	background-color: grey;
-	border-radius: 20px;
+	min-height: 350px;
+	border: 3px solid  var(--color-primary);
+	border-radius: 23px;
 }
 .desc{
 	margin-top: 10px;
+	color: var(--color-second);
 }
 
 
 @media screen and (max-width: 468px){
 .headCardapio span{
-	width: 40%;
+	width: 50%;
 
 }
 }
