--- a/componets/Buttons/buttonDelete/style.module.css
+++ b/componets/Buttons/buttonDelete/style.module.css
@@ -1,3 +1,9 @@
 .buttonIndex{
+    height: 30px;
+    height: 30px;
     margin: auto auto;
+}
+.buttonIndex svg{
+    width: 100%;
+    height: 100%;
 }
