--- a/componets/Layout/CardapioItem/style.module.css
+++ b/componets/Layout/CardapioItem/style.module.css
@@ -13,22 +13,25 @@
 
 }
 .itemCardapioNone{
-		min-height: 350px;
+	min-height: 350px;
 	border: 3px solid  var(--color-primary);
 	border-radius: 23px;
 	position: relative;
 }
-.warningNone:hover{
-	cursor: not-allowed;
-}
+
 .itemCardapioNone .warningNone{
 	border-radius: 20px;
 	display: flex;
 	height: 100%;
 	width: 100%;
+	justify-content: center;
 	opacity: 0.8;
 	background-color: grey;
 	position: absolute;
+}
+.warningNone img{
+	width: 100%;
+	height: 100%;
 }
 
 .warningText{
@@ -59,7 +62,7 @@
 	border-radius:20px 20px 0px 0px;
 }
 .img img{
-		width: 100%;
+	width: 100%;	
 	height: 200px;
 	border-radius:20px 20px 0px 0px;
 	border-bottom: 3px solid  var(--color-primary);
