--- a/componets/IndexTable/List/style.module.css
+++ b/componets/IndexTable/List/style.module.css
@@ -18,12 +18,15 @@
 .wrapper {
     width: 100%;
     display: flex;
-    padding: 0% 5%;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
 }
-
+.titleWrapper{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
 @media (max-width:425px) {
     .title {
         font-size: 3rem;
