--- a/componets/IndexTable/Item/style.module.css
+++ b/componets/IndexTable/Item/style.module.css
@@ -15,12 +15,18 @@
     border-radius: 40px;
 }
 .boxUpdate{
-    width: 100%;
+    background-color: rgba(0, 0, 0, 0.56);
+    width: 100vw;
     text-align: center;
     display: grid;
     align-items: center;
-   
-    border-radius: 40px;
+    position: absolute;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    padding: 20px;
+
 }
 .topFormUpdate{
     display: flex;
@@ -50,6 +56,7 @@
 }
 .containerUpdate{
     width: 100%;
+
 }
 .buttonIndex{
     height: 30px;
@@ -63,7 +70,9 @@
 .buttonsTable{
     display: flex;
 }
-
+.id{
+    overflow: hidden;
+}
 .title {
     font-size: 18px;
     font-weight: bold;
@@ -77,25 +86,19 @@
 }
 
 .desc {
+    height: 21px;
+    overflow: hidden;
     text-align: center;
     color: var(--sub-dark-text);
 }
 
-.containerScreenForm{
-    
-}
 .ScreenForm{
     height: auto;
     width: auto;
-
     display: flex;
     z-index: 5;
-
     justify-content: center;
     align-items: center;
-
-}
-.backgroundFrom{
 
 }
 
