--- a/componets/IndexTable/List/style.module.css
+++ b/componets/IndexTable/List/style.module.css
@@ -5,22 +5,33 @@
     align-items: center;
 }
 
+.full th{
+    border:1px solid black ;
+    padding-left: 5px;
+}
 .title {
     font-size: 4rem;
 }
-
-.desc {
-    font-size: 1.2rem;
-    padding: 0px 50px;
-    color: rgba(0, 0, 0, 0.582);
+.titlesTable{
+    font-weight: bold;
+    color: black;
 }
 
+.itensTable tr td{
+    border: 1px solid black;
+    padding: 8px 5px;
+}
+.thDesc{
+    width: 300px;
+}
+.centerText{
+    text-align: center;
+
+}
 .wrapper {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
+    text-align: left;
+    margin: 0px 10px;
 }
 .titleWrapper{
     display: flex;
