--- a/componets/IndexTable/style.module.css
+++ b/componets/IndexTable/style.module.css
@@ -1,11 +1,13 @@
 .table {
     width: 100%;
+    display: flex;
 }
 
 .container {
     background-color: #c85000;
     min-height: 100vh;
     width: 100%;
+    position: relative;
 }
 
 .title {
