--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,27 @@ body {
   font-family: 'Ubuntu', sans-serif;
 
 }
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
 
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
 
 
 a {
