--- a/componets/Buttons/buttonToggleState/style.module.css
+++ b/componets/Buttons/buttonToggleState/style.module.css
@@ -44,3 +44,13 @@
   left: 50%;
   background: green;
 }
+@media (max-width:540px) {
+  .label{
+    width: 3rem;
+    height: 1.5rem;
+  }
+    .span{
+      height: 1.5rem;
+      width: 1.5rem;
+    }
+}
