--- a/componets/FormCreate/style.module.css
+++ b/componets/FormCreate/style.module.css
@@ -1,15 +1,58 @@
+
 .box {
     width: 90%;
     border: 1px solid white;
     color: black;
     flex-direction: column;
 }
+.titleInput{
+    font-family: 'Inter', sans-serif;
+}
+/* ComboBox */
+.newCategory{
+    background-color: green !important;
+}
+.containerCategory{
 
+}
+.comboBox option{
+  padding:0 30px 0 10px;
+  min-height:40px;
+  display:flex;
+  align-items:center;
+  background:#333;
+  border-top:#222 solid 1px;
+  position:absolute;
+  top:0;
+  width: 100%;
+  pointer-events:none;
+  order:2;
+  z-index:1;
+  transition:background .4s ease-in-out;
+  box-sizing:border-box;
+  overflow:hidden;
+  white-space:nowrap;
+    color:#FFF;
+  
+}
+.comboBox option:hover {
+  background:#666;
+}
+.comboBox {
+  display:flex;
+
+  position:relative;
+  width:250px;
+  height:40px;
+ }
+/* INPUT */
 .input {
+    width: 100%;
     border: 0;
     padding: 7px 7px;
     border: 1px solid #ccc;
     border-radius: 10px;
+    margin: 5px 0px;
 }
 
 .input:focus {
@@ -25,14 +68,14 @@
 }
 
 .input:valid {
-    border-color:#0f0;
+    border-color:black;
 
 }
 .input:invalid {
-    border-color:#f00;
+    border-color:red;
 
 }
-/* Works for Firefox */
+
 .input[type="number"] {
   -moz-appearance: textfield;
 }
@@ -44,6 +87,10 @@
     flex-direction: column;
     gap: 10px;
 }
+
+.board  textarea {
+      resize: none;
+  }
 
 
 .inputImg {
