--- a/componets/IndexTable/style.module.css
+++ b/componets/IndexTable/style.module.css
@@ -1,13 +1,15 @@
 .table {
     width: 100%;
     display: flex;
+    transition: 1s;
 }
 
 .container {
-    background-color: #c85000;
+    background-color: whitesmoke;
     min-height: 100vh;
     width: 100%;
-    position: relative;
+    color: black;
+
 }
 
 .title {
