--- a/componets/FormCreate/style.module.css
+++ b/componets/FormCreate/style.module.css
@@ -11,40 +11,28 @@
 /* ComboBox */
 .newCategory{
     background-color: green !important;
+    color: white;
 }
-.containerCategory{
+.comboBox{
+  -webkit-appearance: button;
+  -webkit-border-radius: 2px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+  -webkit-user-select: none;
+  border: 1px solid #AAA;
+  color: #555;
+  font-size: inherit;
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+    padding: 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: #ddd;
+    list-style: none;
+}
 
-}
-.comboBox option{
-  padding:0 30px 0 10px;
-  min-height:40px;
-  display:flex;
-  align-items:center;
-  background:#333;
-  border-top:#222 solid 1px;
-  position:absolute;
-  top:0;
-  width: 100%;
-  pointer-events:none;
-  order:2;
-  z-index:1;
-  transition:background .4s ease-in-out;
-  box-sizing:border-box;
-  overflow:hidden;
-  white-space:nowrap;
-    color:#FFF;
-  
-}
-.comboBox option:hover {
-  background:#666;
-}
-.comboBox {
-  display:flex;
 
-  position:relative;
-  width:250px;
-  height:40px;
- }
 /* INPUT */
 .input {
     width: 100%;
