--- a/componets/FormLogin/Login/style.module.css
+++ b/componets/FormLogin/Login/style.module.css
@@ -23,7 +23,16 @@
 .container button:hover{
 	background-color: #351e98;
 }
-
+.errorMsg{
+width: 100%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: red;
+    font-weight: bold;
+    overflow: hidden;
+}
 @media screen and (max-width: 400px){
 .container {
 	font-size: 12px;
