--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,8 @@
   --color-second:#290F02;
   --color-head:#E95761;
   --color-crusoe:#1E4620;
+  --color-blue-background-dark:  rgba(49,46,129);
+  --color-blue-background:  rgba(67,56,202);
 }
 
 
